Add jvm-client.options, add more items to jvm.options file